contrast fix on colour barrier (#115)
🐿 v2.5.16

--- a/scss/components/barriers/_colour-trial-grid.scss
+++ b/scss/components/barriers/_colour-trial-grid.scss
@@ -1,6 +1,6 @@
 .trial-subs-card {
     @include oSubsCard;
-	.o-subs-card__select-button {
+    .o-subs-card__select-button {
         @include oButtonsCustomTheme($background: 'white', $accent: 'teal', $colorizer: secondary);
     }
     .o-subs-card__copy-title {
@@ -18,6 +18,7 @@
 }
 
 .trial-subs-card--premium,
+.trial-subs-card--standard,
 .trial-subs-card--trial {
     @include oSubsCardPremium;
     .o-subs-card__select-button {
